--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
+            <version>X</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
