--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
    
 	<dependencies>
         <dependency>
-            <groupId>log4j</groupId>
+            <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>X</version>
+            <version>2.13.2</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.ws</groupId>
